fixed imports and dark desk colors initial bringup

--- a/frappe/public/less/calendar.less
+++ b/frappe/public/less/calendar.less
@@ -109,20 +109,20 @@ th.fc-day-header {
 }
 
 .fc-bg-orange {
-	.fc-bg-color(@orange);
+	.fc-bg-color(orange);
 }
 .fc-bg-red {
-	.fc-bg-color(@red);
+	.fc-bg-color(red);
 }
 .fc-bg-skyblue {
-	.fc-bg-color(@skyblue);
+	.fc-bg-color(skyblue);
 }
 .fc-bg-green {
-	.fc-bg-color(@green);
+	.fc-bg-color(green);
 }
 .fc-bg-blue {
-	.fc-bg-color(@blue);
+	.fc-bg-color(blue);
 }
 .fc-bg-yellow {
-	.fc-bg-color(@yellow);
+	.fc-bg-color(yellow);
 }
