--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -14,10 +14,9 @@
 @text-muted:			    #8d99a6;
 @grey-link-color:		    #212a33;
 @text-dark:                 #2e3338;
-
 @btn-bg:			        #f0f4f7;
-
 @disabled-background:		#f2f5f7;
+@light-bg:			        #fafbfc;
 
 //Navbar
 @navbar-default-bg:         rgba(255, 255, 255, 0.9);
@@ -47,18 +46,9 @@
 @help-progress-bg:          #fafbfc;
 @case-label-color:          #fff;
 
-@light-bg:			        #fafbfc;
-@light-yellow:			    #fffce7;
-@extra-light-yellow:		#fffdf4;
-
 // Page
 @page-header:               #fff;
 @divider-color:             #d8dfe5;
-
-//Setup Wizard
-@setup-wizard-lead:                 #777777;
-@setup-wizard-button:               #b1bdca;
-@setup-wizard-button-disbaled:      #fff;
 
 //Form
 @print-preview:             #f5f7fa;
@@ -121,9 +111,14 @@
 @login-wrapper-border:      #f2f2f2;
 @badge-wrapper-color:       #7575ff;
 
-
+//Desk
 @desk-progress:             #e5e7e9;
 @search-empty:              #d4d9dd;
+
+//Setup Wizard
+@setup-wizard-lead:                 #777777;
+@setup-wizard-button:               #b1bdca;
+@setup-wizard-button-disbaled:      #fff;
 
 //Chat
 @font-weight-bold:					700;
@@ -229,6 +224,8 @@
 @yellow-light:			    #fff5a0;
 @yellow-extra-light:        #fef9cf;
 @yellow-dark:			    #a99e4c;
+@light-yellow:			    #fffce7;
+@extra-light-yellow:		#fffdf4;
 
 @orange:			        #fd784f;
 @orange-light:			    #fda688;
@@ -239,3 +236,5 @@
 @skyblue-light:			    #aae3fe;
 @skyblue-extra-light:	    #d4f1ff;
 @skyblue-dark:			    #548da8;
+
+@white:                     #fff;
