removed scattered imports in less files

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -2,7 +2,8 @@
 @import "mixins.less";
 @import "common.less";
 @import "quill.less";
-
+@import "awesomplete.less";
+@import "datepicker.less";
 @import "flex.less";
 @import "indicator.less";
 @import "avatar.less";
