fixed wrong imports

--- a/frappe/public/less/desk_dark.less
+++ b/frappe/public/less/desk_dark.less
@@ -3,7 +3,8 @@
 @import "mixins.less";
 @import "common.less";
 @import "quill.less";
-
+@import "awesomplete.less";
+@import "datepicker.less";
 @import "flex.less";
 @import "indicator.less";
 @import "avatar.less";
@@ -19,7 +20,6 @@
 @import "chat.less";
 @import "filters.less";
 @import "social.less";
-
 
 .nav-pills a, .nav-pills a:hover {
 	border-bottom: none;
