--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -19,8 +19,8 @@
 @light-bg:			        #fafbfc;
 
 //Navbar
-@navbar-default-bg:         rgba(255, 255, 255, 0.9);
-@navbar-default-border:     rgba(54, 65, 76, 0.1);
+@navbar-default-bg:         #f5f7fa;
+@navbar-default-border:     #ebeff2;
 @navbar-default-color:	    #6c7680;
 @navbar-inverse-color:	    #9d9d9d;
 @navbar-search-bg:          rgba(255, 255, 255, 0.9);
