--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -1,9 +1,9 @@
 /* dark mode colors */
-@dark-primary-dark : rgba(33, 33, 33, 1);
-@dark-primary : rgba(48, 48, 48, 1);
-@dark-primary-light : rgba(66, 66, 66, 1);
-@dark-border : rgba(79, 79, 79, 1);
-@dark-text : white;
+@dark-primary-dark :    #212121;
+@dark-primary :         #303030;
+@dark-primary-light :   #424242;
+@dark-border :          #4f4f4f;
+@dark-text :            white;
 
 //Erpnext
 @brand-primary:			    #5e64ff;
@@ -45,7 +45,7 @@
 @modal-header:              #fff;
 
 //Desktop
-@page-desktop:              @dark-primary-dark;
+@page-desktop:              #212121;
 @circle-color:              #fff;
 @icon-hover:                #fff;
 @panel-bg:			        #f7fafc;
