added more customizing options for better theming and added all css and less in one file

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -19,6 +19,9 @@
 @import "chat.less";
 @import "filters.less";
 @import "social.less";
+@import "module.less";
+@import "report.less";
+@import "frappe-datatable.less";
 
 .nav-pills a, .nav-pills a:hover {
 	border-bottom: none;
