--- a/frappe/public/less/desk_dark.less
+++ b/frappe/public/less/desk_dark.less
@@ -10,6 +10,7 @@
 @import "avatar.less";
 @import "navbar.less";
 @import "sidebar.less";
+@import "modal.less";
 @import "page.less";
 @import "tree.less";
 @import "desktop.less";
@@ -20,6 +21,9 @@
 @import "chat.less";
 @import "filters.less";
 @import "social.less";
+@import "module.less";
+@import "report.less";
+@import "frappe-datatable.less";
 
 .nav-pills a, .nav-pills a:hover {
 	border-bottom: none;
