--- a/frappe/public/less/frappe-datatable.less
+++ b/frappe/public/less/frappe-datatable.less
@@ -2,6 +2,8 @@
 	margin-left: -1px;
 	margin-top: -1px;
 	font-size: @text-medium;
+	background-color: @datatable-bg-color;
+	border-color: @datatable-border-color;
 
 	.frappe-control, .form-control {
 		margin: 0;
