--- a/frappe/public/less/module.less
+++ b/frappe/public/less/module.less
@@ -1,5 +1,3 @@
-@import "variables.less";
-
 .module-head {
 	padding: 15px 30px;
 	border-bottom: 1px solid @light-border-color;
@@ -35,6 +33,7 @@
 @media(min-width: @screen-xs) {
 	.module-section:nth-child(even) {
 		background-color: @light-bg;
+		border-bottom: 1px solid @light-border-color;
 	}
 
 	.module-section:last-child {
