--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -35,20 +35,22 @@
 
 //Modal
 @modal-backdrop-bg:		    #334143;
+@modal-bg-color:            #fff;
 @modal-header:              #fff;
 
 //Desktop
 @page-desktop:              #4B4C9D;
 @circle-color:              #fff;
 @icon-hover:                #fff;
-@panel-bg:			        #f7fafc;
 @help-message-bg:           #fff;
 @help-progress-bg:          #fafbfc;
 @case-label-color:          #fff;
 
-// Page
+//Page
 @page-header:               #fff;
+@page-container:            #fff;
 @divider-color:             #d8dfe5;
+@panel-bg:			        #f7fafc;
 
 //Form
 @print-preview:             #f5f7fa;
@@ -94,6 +96,8 @@
 
 //Datatable
 @dt-filter-bg:              #fff;
+@datatable-bg-color:        #fff;
+@datatable-border-color:    #fff;
 
 //List
 @taggle-list-hover:         #cfdce5;
@@ -133,6 +137,9 @@
 @chat-popper-panel-height:			500px;
 @chat-popper-z-index:				1035;
 @chat-popper-panel-box-shadow:		@fab-box-shadow;
+@chat-bg:                           #fff;
+@chat-panel-bg:                     #f5f7fa;
+@chat-border:                       @border-color;
 @chat-room-list-content-max-width:	180px;
 @chat-form-font-size:				12px;
 @chat-form-menu-border-radius:		4px;
@@ -172,6 +179,10 @@
 @calender-bg:               #cfdce5;
 @calender-border:           #E8DDFF;
 @calender-bg:               #fff;
+
+//Nav Pills
+@nav-pills-bg-color:        #f5f7fa;
+@nav-pills-border-color:    #f5f7fa;
 
 //Awesomplete
 @awesomplete-ul-bg:         #fff;
