--- a/frappe/public/less/chat.less
+++ b/frappe/public/less/chat.less
@@ -60,12 +60,14 @@
         {
             & > .panel
             {
-                       position: relative;
-                        display: flex;
-                 flex-direction: column;
-                          width: @chat-popper-panel-width;
-                         height: @chat-popper-panel-height;
-                     box-shadow: @chat-popper-panel-box-shadow;
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                width: @chat-popper-panel-width;
+                height: @chat-popper-panel-height;
+                box-shadow: @chat-popper-panel-box-shadow;
+                background-color: @chat-bg;
+                border-color: @chat-border;
 
                 .vcenter
                 {
@@ -78,7 +80,9 @@
                 .panel-heading
                 {
                     // height: 50px;
-
+                    background-color: @chat-panel-bg;
+                    border-color: @chat-border;
+                    
                     .panel-title
                     {
                         .media-heading
@@ -371,5 +375,4 @@
     opacity: 0.5;
     font-size: 10px;
     padding: 5px;
-    // background-color: @modal-header;
 }
