--- a/frappe/public/less/common.less
+++ b/frappe/public/less/common.less
@@ -4,6 +4,7 @@ body {
 
 a {
 	cursor: pointer;
+	color: @text-color;
 }
 
 a,
@@ -23,6 +24,7 @@ img {
 
 p {
 	margin: 10px 0;
+	color: @text-color;
 }
 
 .text-color {
@@ -142,6 +144,7 @@ a.badge-hover& {
 	// margin: 15px 0px;
 	// text-align: center;
 	word-wrap: break-word;
+	color: @text-color;
 
 	pre {
 		text-align: left;
