--- a/frappe/public/less/desk-min.less
+++ b/frappe/public/less/desk-min.less
@@ -1,5 +1,4 @@
-
-@import "variables_dark.less";
+@import "variables.less";
 @import "mixins.less";
 @import "common.less";
 @import "quill.less";
@@ -10,7 +9,6 @@
 @import "avatar.less";
 @import "navbar.less";
 @import "sidebar.less";
-@import "modal.less";
 @import "page.less";
 @import "tree.less";
 @import "desktop.less";
