--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -1,28 +1,3 @@
-@import "variables.less";
-@import "mixins.less";
-@import "common.less";
-@import "quill.less";
-@import "awesomplete.less";
-@import "datepicker.less";
-@import "flex.less";
-@import "indicator.less";
-@import "avatar.less";
-@import "navbar.less";
-@import "sidebar.less";
-@import "page.less";
-@import "tree.less";
-@import "desktop.less";
-@import "form.less";
-@import "mobile.less";
-@import "kanban.less";
-@import "controls.less";
-@import "chat.less";
-@import "filters.less";
-@import "social.less";
-@import "module.less";
-@import "report.less";
-@import "frappe-datatable.less";
-
 .nav-pills a, .nav-pills a:hover {
 	border-bottom: none;
 }
@@ -219,6 +194,7 @@ textarea.form-control {
 
 .modal-title {
 	margin-top: 5px;
+	color: @text-color;
 }
 
 .modal-message {
