--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -114,10 +114,10 @@
 	}
 }
 .navbar-nav > li > .dropdown-menu {
-    background-color: @navbar-default-bg;
+    background-color: @navbar-dropdown-bg;
 }
 .dropdown-help .dropdown-menu {
-	background-color: @navbar-default-bg;
+	background-color: @navbar-dropdown-bg;
 	width: 350px !important;
 	max-height: 440px;
 	overflow: auto;
@@ -264,4 +264,5 @@
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
 	background-color : @nav-pills-bg-color;
 	border-color: @nav-pills-border-color;
+	color: @text-color;
 }
