--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -24,6 +24,7 @@
 @navbar-default-color:	    #6c7680;
 @navbar-inverse-color:	    #9d9d9d;
 @navbar-search-bg:          rgba(255, 255, 255, 0.9);
+@navbar-dropdown-bg:        #fff;
 
 //Breadcrumb
 @breadcrumb-divider-color:  #c0c9d2;
@@ -186,6 +187,7 @@
 
 //Awesomplete
 @awesomplete-ul-bg:         #fff;
+@awesomplete-ul-bg-selected:#f0f4f7;
 
 //Indicators
 @indicator-blue:		    #5e64ff;
