--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -16,7 +16,7 @@
 @border-color:			    @dark-border;
 @text-extra-muted:		    #d1d8dd;
 @light-border-color:		@dark-border;
-@text-color:			    #36414c;
+@text-color:			    @dark-text;
 @text-light:			    #6c7680;
 @text-muted:			    #8d99a6;
 @grey-link-color:		    #212a33;
@@ -30,6 +30,7 @@
 @navbar-default-color:	    @dark-primary-light;
 @navbar-inverse-color:	    @dark-primary-light;
 @navbar-search-bg:          @dark-primary-dark;
+@navbar-dropdown-bg:        @dark-primary-light;
 
 //Breadcrumb
 @breadcrumb-divider-color:  #c0c9d2;
@@ -145,7 +146,7 @@
 @chat-popper-z-index:				1035;
 @chat-popper-panel-box-shadow:		@fab-box-shadow;
 @chat-bg:                           @dark-primary-light;
-@chat-panel-bg:                     @dark-primary-light;
+@chat-panel-bg:                     @dark-primary;
 @chat-border:                       @dark-border;
 @chat-room-list-content-max-width:	180px;
 @chat-form-font-size:				12px;
@@ -192,7 +193,8 @@
 @nav-pills-border-color:    @dark-primary-light;
 
 //Awesomplete
-@awesomplete-ul-bg:         #fff;
+@awesomplete-ul-bg:         @dark-primary-dark;
+@awesomplete-ul-bg-selected:@dark-primary-light;
 
 //Indicators
 @indicator-blue:		    #5e64ff;
