--- a/frappe/public/less/desktop.less
+++ b/frappe/public/less/desktop.less
@@ -42,7 +42,7 @@
 .app-icon .inner, .app-icon i {
 	font-size: 32px;
 	min-width: 32px;
-	color: @light-bg;
+	color: @app-icon-bg;
 	display: inline-block;
 	transition: 0.2s;
 	-webkit-transition: 0.2s;
