--- a/frappe/public/less/form.less
+++ b/frappe/public/less/form.less
@@ -586,6 +586,8 @@ h6.uppercase, .h6.uppercase {
 
 	.comment-input-container {
 		padding: 15px;
+		background-color: @comment-container-bg;
+		color: @text-color;
 
 		.awesomplete > ul {
 			min-width: 200px;
