--- a/frappe/public/less/frappe-web.less
+++ b/frappe/public/less/frappe-web.less
@@ -2,8 +2,9 @@
 @import "mixins.less";
 @import "common.less";
 @import "flex.less";
-@import "website.less";
+@import "indicator.less";
 @import "avatar.less";
+@import "website.less";
 @import "form.less";
 @import	"controls.less";
 @import "chat.less";
