--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -60,6 +60,10 @@ body[data-route^="Module"] .main-menu {
 
 	.sidebar-menu > li > a {
 		display: inline-block;
+
+		&.hover{
+			color: @text-color;
+		}
 	}
 
 	.sidebar-menu {
