--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -16,7 +16,7 @@
 @text-dark:                 #2e3338;
 @btn-bg:			        #f0f4f7;
 @disabled-background:		#f2f5f7;
-@light-bg:			        #fafbfc;
+@text-hover-color:          @grey-link-color;
 
 //Navbar
 @navbar-default-bg:         #f5f7fa;
@@ -31,8 +31,13 @@
 
 //Dropdown
 @dropdown-background:       #fff;
+@dropdown-hover:            @navbar-default-bg;
+@dropdown-active-bg:        #dfe5ef;
 @dropdown-border:           rgba(0, 0, 0, 0.14902);
 @dropdown-box-shadow:       rgba(0, 0, 0, .175);
+
+//Comment Container
+@comment-container-bg:      #fff;
 
 //Modal
 @modal-backdrop-bg:		    #334143;
@@ -46,6 +51,7 @@
 @help-message-bg:           #fff;
 @help-progress-bg:          #fafbfc;
 @case-label-color:          #fff;
+@app-icon-bg:               #fff;
 
 //Page
 @page-header:               #fff;
@@ -107,6 +113,7 @@
 
 //Module
 @module-item-progress:      #999999;
+@light-bg:			        #fafbfc;
 
 //Role Editor
 @table-user-perm-border:    #aaa;
@@ -179,11 +186,11 @@
 //Calender
 @calender-bg:               #cfdce5;
 @calender-border:           #E8DDFF;
-@calender-bg:               #fff;
 
 //Nav Pills
 @nav-pills-bg-color:        #f5f7fa;
 @nav-pills-border-color:    #f5f7fa;
+@nav-pills-bg-hover-color:  @navbar-default-bg;
 
 //Awesomplete
 @awesomplete-ul-bg:         #fff;
