--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -23,6 +23,7 @@
 @text-dark:                 #2e3338;
 @btn-bg:			        #f0f4f7;
 @disabled-background:		#f2f5f7;
+@text-hover-color:          @dark-text;
 
 //Navbar
 @navbar-default-bg:         @dark-primary-light;
@@ -37,8 +38,13 @@
 
 //Dropdown
 @dropdown-background:       #fff;
+@dropdown-hover:            @dark-primary;
+@dropdown-active-bg:        @dark-primary;
 @dropdown-border:           rgba(0, 0, 0, 0.14902);
 @dropdown-box-shadow:       rgba(0, 0, 0, .175);
+
+//Comment Container
+@comment-container-bg:      @dark-primary-light;
 
 //Modal
 @modal-backdrop-bg:		    #334143;
@@ -52,6 +58,7 @@
 @help-message-bg:           #fff;
 @help-progress-bg:          #fafbfc;
 @case-label-color:          #fff;
+@app-icon-bg:               #fff;
 
 //Page
 @page-header:               @dark-primary-dark;
@@ -184,13 +191,13 @@
 @kanban-card-bg:            #fff;
 
 //Calender
-@calender-bg:               #cfdce5;
+@calender-bg:               @dark-primary-light;
 @calender-border:           #E8DDFF;
-@calender-bg:               #fff;
 
 //Nav Pills
 @nav-pills-bg-color:        @dark-primary-light;
 @nav-pills-border-color:    @dark-primary-light;
+@nav-pills-bg-hover-color:  @dark-primary-light;
 
 //Awesomplete
 @awesomplete-ul-bg:         @dark-primary-dark;
