--- a/frappe/public/less/desk-min.less
+++ b/frappe/public/less/desk-min.less
@@ -23,3 +23,9 @@
 @import "report.less";
 @import "frappe-datatable.less";
 @import "desk.less";
+@import "list.less";
+@import "calendar.less";
+@import "role_editor.less";
+@import "gantt.less";
+@import "tags.less";
+@import "charts.less";
