--- a/frappe/public/less/desk_dark.less
+++ b/frappe/public/less/desk_dark.less
@@ -24,7 +24,7 @@
 @import "module.less";
 @import "report.less";
 @import "frappe-datatable.less";
-@import "desk.less";
+@import "desk-min.less";
 @import "list.less";
 @import "calendar.less";
 @import "role_editor.less";
