--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -72,6 +72,7 @@
 @post-action-container:     #F6F6F6;
 
 //Common
+@body-bg:                   #fff;
 @link-disabled:             #888;
 @link-badge:                #d8dfe5;
 @freeze-bg-color:           #334143;
