--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -37,7 +37,7 @@
 @breadcrumb-divider-color:  #c0c9d2;
 
 //Dropdown
-@dropdown-background:       #fff;
+@dropdown-background:       @dark-primary-light;
 @dropdown-hover:            @dark-primary;
 @dropdown-active-bg:        @dark-primary;
 @dropdown-border:           rgba(0, 0, 0, 0.14902);
@@ -79,6 +79,7 @@
 @post-action-container:     #F6F6F6;
 
 //Common
+@body-bg:                   @dark-primary-dark;
 @link-disabled:             #888;
 @link-badge:                #d8dfe5;
 @freeze-bg-color:           #334143;
