--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -7,6 +7,7 @@
 @import "flex.less";
 @import "indicator.less";
 @import "avatar.less";
+@import "form_grid.less";
 @import "navbar.less";
 @import "sidebar.less";
 @import "page.less";
