--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -24,7 +24,6 @@
 @navbar-default-color:	    #6c7680;
 @navbar-inverse-color:	    #9d9d9d;
 @navbar-search-bg:          rgba(255, 255, 255, 0.9);
-@navbar-dropdown-bg:        #fff;
 
 //Breadcrumb
 @breadcrumb-divider-color:  #c0c9d2;
@@ -123,6 +122,9 @@
 @page-card-bg-color:        #fff;
 @login-wrapper-border:      #f2f2f2;
 @badge-wrapper-color:       #7575ff;
+
+//Help on Search Input
+@help-input-bg:             #fff;
 
 //Desk
 @desk-progress:             #e5e7e9;
