--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -31,13 +31,12 @@
 @navbar-default-color:	    @dark-primary-light;
 @navbar-inverse-color:	    @dark-primary-light;
 @navbar-search-bg:          @dark-primary-dark;
-@navbar-dropdown-bg:        @dark-primary-light;
 
 //Breadcrumb
 @breadcrumb-divider-color:  #c0c9d2;
 
 //Dropdown
-@dropdown-background:       @dark-primary-light;
+@dropdown-background:       @dark-primary-dark;
 @dropdown-hover:            @dark-primary;
 @dropdown-active-bg:        @dark-primary;
 @dropdown-border:           rgba(0, 0, 0, 0.14902);
@@ -87,7 +86,7 @@
 //Docs
 @body-color:                #454e57;
 @code-color:                #e66a12;
-@code-bg-color:             #fff6df;
+@code-bg-color:             @dark-primary-dark;
 @pre-bg-color:              #fafbfc;
 @pre-border-color:          #e1e9f0;
 @hljs-color:                #454e57;
@@ -130,6 +129,9 @@
 @page-card-bg-color:        #fff;
 @login-wrapper-border:      #f2f2f2;
 @badge-wrapper-color:       #7575ff;
+
+//Help on Search Input
+@help-input-bg:             @dark-primary-dark;
 
 //Desk
 @desk-progress:             #e5e7e9;
