--- a/frappe/public/less/desk_dark.less
+++ b/frappe/public/less/desk_dark.less
@@ -8,6 +8,7 @@
 @import "flex.less";
 @import "indicator.less";
 @import "avatar.less";
+@import "form_grid.less";
 @import "navbar.less";
 @import "sidebar.less";
 @import "modal.less";
