--- a/frappe/templates/styles/standard.css
+++ b/frappe/templates/styles/standard.css
@@ -151,7 +151,7 @@ table td div {
 /* hack for webkit specific browser */
 @media (-webkit-min-device-pixel-ratio:0) {
 	thead, tfoot {
-		display:table-header-group
+		display: table-header-group;
 	}
 }
 
