--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -107,6 +107,8 @@
 @grid-body-bg:              #fff;
 @from-in-grid-bg:           #fff;
 @from-in-grid-footer-bg:    #fff;
+@grid-bg:                   @dark-primary;
+@form-section-bg:           @dark-primary-dark;
 
 //Datatable
 @dt-filter-bg:              #fff;
