--- a/frappe/public/less/variables.less
+++ b/frappe/public/less/variables.less
@@ -100,6 +100,8 @@
 @grid-body-bg:              #fff;
 @from-in-grid-bg:           #fff;
 @from-in-grid-footer-bg:    #fff;
+@grid-bg:                   #fff;
+@form-section-bg:           #fff;
 
 //Datatable
 @dt-filter-bg:              #fff;
